--- a/package.json
+++ b/package.json
@@ -2,26 +2,31 @@
   "name": "low-code",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "@designable/react": "^1.0.0-beta.45",
+    "@designable/react-settings-form": "^1.0.0-beta.45",
+    "@formily/antd": "^2.3.7",
+    "@formily/core": "^2.3.7",
+    "@formily/react": "^2.3.7",
+    "antd": "^5.28.0",
+    "dayjs": "^1.11.19",
+    "moment": "^2.30.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "@types/node": "^24.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "less": "^4.4.2",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.2"
   }
 }
