--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dayjs": "^1.11.19",
     "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
